Moved things around; breadcrumb revamp

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -8,24 +8,28 @@
 .navbar {
     height: 50px;
 }
-
-.header-image{
-	align: left;
+.top-bar {
 	min-width: 100%;
-	display: inline-block;
 	background-color: white;
+}
+.header-image{
 	padding-bottom: 10px;
 	padding-left: 30px;
-	padding-top: 10px;	
+	padding-top: 10px;
 }
-
+.glyphicon-chevron-right {
+	margin-left: 12px;
+}
 .navbar-brand{
 	font-family: Verdana, Geneva, sans-serif;
-	font-size: 15px;
+	font-size: 20px;
 	padding-right: 20px;
+	cursor: pointer;
 }
-
-#navbar a:link, #navbar a:visited{
+.navbar-brand>span {
+	color: white;
+}
+#navbar a:link, #navbar a:visited {
 	color: #959595;
 	text-decoration: none;
 }
@@ -48,7 +52,10 @@
 	background-color: #242424;
 	color:white;
 }
-
+.header-text {
+	font-size: 30px;
+	margin-top: 30px;
+}
 .vertical-center {
     position: relative;
     top: 50%;
@@ -174,10 +181,6 @@
 .himg{
     box-shadow: 6px 6px 5px #787878;
 	margin-top: 30px;
-}
-
-.top-50{
-	margin-top: 50px;
 }
 
 .btn-default{
