--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,26 +1,27 @@
-<div class="header-image">
-	<a href="http://biotility.research.ufl.edu/"><img src="modules/core/client/img/brand/logo2.jpg" alt="" style="height: 80px;"></a>
-</div>
-
-<div id="navbar" class="container-fluid vertical-center bg-navbar">
-	<div class="navbar-brand pull-left">
-    	Preparation for the Biotechnician Assistant Credential Exam (BACE)
+<div class="container-fluid top-bar">
+    <div class="row">
+        <div class="col-md-3 header-image">
+            <a href="http://biotility.research.ufl.edu/"><img src="modules/core/client/img/brand/logo2.jpg" alt="" style="height: 80px;"></a>
+        </div>
+        <div class="col-md-6 text-center header-text">
+            Preparation for the Biotechnician Assistant Credential Exam (BACE)
+        </div>
     </div>
-    <a
-    	ng-show="authentication.user" href="#"><img src="modules/core/client/img/user/carl.png" alt="" class="img-circle 
-        user-pic pull-right"> 
+</div>
+<div id="navbar" ng-controller="HeaderController" class="container-fluid vertical-center bg-navbar">
+    <span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
+        {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
+    </span>
+    <a ng-show="authentication.user" href="#"><img src="modules/core/client/img/user/carl.png" alt="" class="img-circle 
+        user-pic pull-right">
     </a>
     <div ng-show="authentication.user" class="navbar-brand pull-right">
         Logout
     </div>
     <div ng-hide="authentication.user" class="navbar-brand pull-right">
-   	 <a data-ui-sref="authentication.signin">Login</a>
+        <a data-ui-sref="authentication.signin">Login</a>
     </div>
-
-      <div ng-show="authentication.user.isTeacher" class="navbar-brand pull-right">
+    <div ng-show="authentication.user.isTeacher" class="navbar-brand pull-right">
         Progress
     </div>
-    <!--<div class="navbar-brand pull-right">
-    	<a href="http://biotility.research.ufl.edu/">Biotility</a>
-    </div>-->
 </div>
