--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -22,7 +22,7 @@ The knowledge exam can be administered by an approved proctor via a computer-bas
                     </div>
                     <div align="center">
                     <a data-ui-sref="authentication.signup">
-    					<button class="btn btn-default top-50" >Get Started</button>
+    					<button class="btn btn-default margin-top-50" >Get Started</button>
 					</a>
                     </div>
             </div>
