--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,112 +1,92 @@
 <div ng-controller="AuthenticationController">
-	<div class = "row ">
-        	<div class="col-md-2 col-md-offset-5 text-left">
-            	<h1>Sign-Up<br></h1>
-            </div>
+    <div class="row ">
+        <div class="col-md-2 col-md-offset-5 text-left">
+            <h1>Sign-Up<br></h1>
+        </div>
     </div>
     <div class="row topmargin-50">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>First Name: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="text" ng-model="firstName">
-            </div>
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>First Name: </p>
+        </div>
+        <div class="col-md-2">
+            <input type="text" ng-model="credentials.firstName">
+        </div>
     </div>
-
-        <div class = "row">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Last Name: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="text" ng-model="lastName">
-            </div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Last Name: </p>
         </div>
-
-        <div class = "row">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>E-mail: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="email" ng-model="email">
-            </div>
+        <div class="col-md-2">
+            <input type="text" ng-model="credentials.lastName">
         </div>
-
-        <div class = "row">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Username: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="text" ng-model="username">
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>E-mail: </p>
         </div>
-
-        <div class = "row">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Password: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="password" ng-model="password">
-            </div>
+        <div class="col-md-2">
+            <input type="email" ng-model="credentials.email">
         </div>
-
-        <div class = "row">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Account Type: </p>
-            </div>
-            <div class = "radio col-md-2">
-                  <label>
-                    <input type="radio" name="profiletype" value="Teacher"  ng-model="type"  >
-                    Teacher
-                  </label><br/>
-                  <label>
-                    <input type="radio" name="profiletype" value="Student" ng-model="type" >
-                    Student
-                  </label><br/>
-            </div>
-
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Username: </p>
         </div>
-
-        <!-- if student -->
-         <div class = "row" ng-show="type=='Student'">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Class Code: </p>
-            </div>
-            <div class = "col-md-2">
-            	<input type="text" ng-model="classCode">
-            </div>
-
+        <div class="col-md-2">
+            <input type="text" ng-model="credentials.username">
         </div>
-
-        <!-- if teacher -->
-        <div class = "row" ng-show="type=='Teacher'">
-        	<div class="col-md-2 col-md-offset-3 text-right">
-            	<p>Courses: </p>
-            </div>
-            <div class = "col-md-2">
-                <select ng-repeat="x in class track by $index">
-                	  <option selected disabled>Select Course</option>
-                      <option ng-repeat="x in classNames track by $index">{{x}}</option>
-                 </select>
-                 <button type="button" class="btn btn-default" ng-click = "add()">
-       				 +
-    			</button>
-            </div>
-
-
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Password: </p>
         </div>
-
-  <div class="topmargin-10" style="text-align:center;" >
-    <a class="btn btn-default" ng-click="signup()" href="">
+        <div class="col-md-2">
+            <input type="password" ng-model="credentials.password">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Account Type: </p>
+        </div>
+        <div class="radio col-md-2">
+            <label>
+                <input type="radio" name="profiletype" value="Teacher" ng-model="credentials.type"> Teacher
+            </label>
+            <br/>
+            <label>
+                <input type="radio" name="profiletype" value="Student" ng-model="credentials.type"> Student
+            </label>
+            <br/>
+        </div>
+    </div>
+    <!-- if student -->
+    <div class="row" ng-show="type=='Student'">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Class Code: </p>
+        </div>
+        <div class="col-md-2">
+            <input type="text" ng-model="credentials.courseCode">
+        </div>
+    </div>
+    <!-- if teacher -->
+    <div class="row" ng-show="type=='Teacher'">
+        <div class="col-md-2 col-md-offset-3 text-right">
+            <p>Courses: </p>
+        </div>
+        <div class="col-md-2">
+            <select ng-repeat="x in class track by $index">
+                <option selected disabled>Select Course</option>
+                <option ng-repeat="x in classNames track by $index">{{x}}</option>
+            </select>
+            <button type="button" class="btn btn-default" ng-click="add()">
+                +
+            </button>
+        </div>
+    </div>
+    <div class="topmargin-10" style="text-align:center;">
+        <a class="btn btn-default" ng-click="signup()" href="">
       Register
     </a>
-  </div>
-
+    </div>
 </div>
-
-
-
-
-
-
-
 </div>
