--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,92 +1,103 @@
-<div ng-controller="AuthenticationController">
-    <div class="row ">
-        <div class="col-md-2 col-md-offset-5 text-left">
-            <h1>Sign-Up<br></h1>
+<div style="margin-top:200px;" ng-controller="AuthenticationController">
+    <form ng-submit="signup(true)">
+        <div class="row ">
+            <div class="col-md-2 col-md-offset-5 text-left">
+                <h1>Sign-Up<br></h1>
+            </div>
         </div>
-    </div>
-    <div class="row topmargin-50">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>First Name: </p>
+        <div class="row topmargin-50">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>First Name: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="text" ng-model="credentials.firstName" required>
+            </div>
         </div>
-        <div class="col-md-2">
-            <input type="text" ng-model="credentials.firstName">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>Last Name: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="text" ng-model="credentials.lastName" required>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Last Name: </p>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>E-mail: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="email" ng-model="credentials.email" required>
+            </div>
         </div>
-        <div class="col-md-2">
-            <input type="text" ng-model="credentials.lastName">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>Username: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="text" ng-model="credentials.userName" required>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>E-mail: </p>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>Password: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="password" ng-model="credentials.password" required>
+            </div>
         </div>
-        <div class="col-md-2">
-            <input type="email" ng-model="credentials.email">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>Account Type: </p>
+            </div>
+            <div class="radio col-md-2">
+                <label>
+                    <input type="radio" name="profiletype" value="Teacher" ng-model="credentials.profileType" required> Teacher
+                </label>
+                <br/>
+                <label>
+                    <input type="radio" name="profiletype" value="Student" ng-model="credentials.profileType" required> Student
+                </label>
+                <br/>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Username: </p>
+        <!-- if student -->
+        <div class="row" ng-show="credentials.profileType=='Student'">
+            <div class="col-md-2 col-md-offset-3 text-right">
+                <p>Class Code: </p>
+            </div>
+            <div class="col-md-2">
+                <input type="number" ng-model="credentials.courseCode" required>
+            </div>
         </div>
-        <div class="col-md-2">
-            <input type="text" ng-model="credentials.username">
+        <!-- if teacher -->
+        <div ng-show="credentials.profileType=='Teacher'">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-3 text-right">
+                    <p>Courses: </p>
+                </div>
+                <div class="col-md-2">
+                    <select ng-model="toAdd">
+                        <option ng-repeat="name in classNames track by $index">{{name}}</option>
+                    </select>
+                    <button type="button" class="btn btn-info" ng-click="add(toAdd)">
+                        +
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-md-offset-3 text-right">
+                    <ul class="list-inline">
+                        <li ng-repeat="x in credentials.coursesTeaching track by $index">
+                            <button type="button" class="btn btn-success">{{x}}</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Password: </p>
-        </div>
-        <div class="col-md-2">
-            <input type="password" ng-model="credentials.password">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Account Type: </p>
-        </div>
-        <div class="radio col-md-2">
-            <label>
-                <input type="radio" name="profiletype" value="Teacher" ng-model="credentials.type"> Teacher
-            </label>
-            <br/>
-            <label>
-                <input type="radio" name="profiletype" value="Student" ng-model="credentials.type"> Student
-            </label>
-            <br/>
-        </div>
-    </div>
-    <!-- if student -->
-    <div class="row" ng-show="type=='Student'">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Class Code: </p>
-        </div>
-        <div class="col-md-2">
-            <input type="text" ng-model="credentials.courseCode">
-        </div>
-    </div>
-    <!-- if teacher -->
-    <div class="row" ng-show="type=='Teacher'">
-        <div class="col-md-2 col-md-offset-3 text-right">
-            <p>Courses: </p>
-        </div>
-        <div class="col-md-2">
-            <select ng-repeat="x in class track by $index">
-                <option selected disabled>Select Course</option>
-                <option ng-repeat="x in classNames track by $index">{{x}}</option>
-            </select>
-            <button type="button" class="btn btn-default" ng-click="add()">
-                +
+        <div class="topmargin-10" style="text-align:center;">
+            <button class="btn btn-default" type="submit">
+                Register
             </button>
         </div>
-    </div>
-    <div class="topmargin-10" style="text-align:center;">
-        <a class="btn btn-default" ng-click="signup()" href="">
-      Register
-    </a>
-    </div>
-</div>
+    </form>
 </div>
