--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -12,7 +12,7 @@
     <span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
         {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
     </span>
-    <div ng-show="authentication.user" class="navbar-brand pull-right">
+    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
         Logout
     </div>
     <a ng-show="authentication.user" href="#"><img src="modules/core/client/img/user/carl.png" alt="" class="img-circle 
