--- a/modules/core/client/views/quizResults.client.view.html
+++ b/modules/core/client/views/quizResults.client.view.html
@@ -1,4 +1,7 @@
 <div class = "margin-top-50" ng-controller = "QuizResultsController">
+	<div class="header-space">
+        <!-- Using this for space -->
+    </div>
 		<div class = "container" >
 			<br>
 			<h1> Yay you finished the section</h1>
