--- a/modules/core/client/views/quizTemplate.client.view.html
+++ b/modules/core/client/views/quizTemplate.client.view.html
@@ -1,6 +1,7 @@
 <div ui-view class = "margin-top-50" ng-controller = "QuizController">
-</br>
-</br>
+    <div class="header-space">
+        <!-- Using this for space -->
+    </div>
 	<div class = "container" >
 		  <div class = "col-md-10 col-md-offset-1" style = "border-style: solid;">
 	      	<h1> Question is: {{arr[index].q}} </h1>
