reduce header size and remove about

--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -39,7 +39,7 @@
 
        
     </script>
-            <button type="submit" ng-click="open()" class="btn btn-primary">
+            <button type="submit" ng-click="open()" class="btn btn-default">
                 Log-in
             </button>
             <div ng-show="selected">Selection from a modal: {{ selected }}</div>
