--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,8 +1,9 @@
 <div class="margin-top-50 content-main" ng-controller="MainController">
+    <div top-images>
+    	<!--insert carousel here...-->
+        <img src="modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="" style="width: 100%; height: 100%;">
+    </div>
     
-    
-  
-  
     <div class="container">
         <h2>Select a topic to begin: </h2>
         <div class="row">
