subject and images added

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -19,6 +19,6 @@
         </div>
     </div>
 
-    <div class="text-center">&copy; Biotility, 20XX-2015.</div>
+    <div class="text-center">&copy; Biotility, 2015.</div>
     
 </div>
