--- a/modules/core/client/views/subject.client.view.html
+++ b/modules/core/client/views/subject.client.view.html
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <!--put subject picture here along with link-->
                 <div class="button big-btn text-center center-block">
-                    <a ui-sref="subject.quiz">
+                    <a ui-sref="quiz_sample"> <!--Made an edit here-->
                         <h1>KNOWLEDGE ASSESSMENT</h1>Click here to take quiz on select topic
                     </a>
                 </div>
