--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,17 +1,32 @@
 <div id="navbar" ng-controller="HeaderController" class="container-fluid vertical-center bg-navbar">
-    <span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
+    <!--<span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
         {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
-    </span>
-    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
-        Logout
+    </span>-->
+    <div class=" nav-img pull-left">
+    	<a data-ui-sref="home"><img src="modules/core/client/img/brand/logo.png" alt="" style="width: 130px;"></a>
+    </div>
+    <div  class="navbar-brand pull-right">
+        Contact
+    </div>
+    <div ng-show="authentication.user.isTeacher" class="navbar-brand pull-right">
+        Profile
     </div>
     <a ng-show="authentication.user" href="#"><img src="modules/core/client/img/user/carl.png" alt="" class="img-circle 
         user-pic pull-right">
     </a>
+    <div ng-show="authentication.user" class="navbar-brand pull-right">
+        Raymond, R
+    </div>
+    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
+        Logout
+    </div>
     <div ng-hide="authentication.user" class="navbar-brand pull-right">
         <a data-ui-sref="authentication.signin">Login</a>
     </div>
-    <div ng-show="authentication.user.isTeacher" class="navbar-brand pull-right">
-        Progress
+    <div  class="navbar-brand pull-right">
+        About Us
+    </div>
+    <div  class="navbar-brand pull-right">
+       <a data-ui-sref="home">Home</a>
     </div>
 </div>
