--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,42 +1,32 @@
 <div class="margin-top-50 content-main" ng-controller="MainController">
     <div top-images>
-    	<!--insert carousel here...-->
+        <!--insert carousel here...-->
         <img src="modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="" style="width: 100%; height: 100%;">
     </div>
-    
     <div class="head">
-    
-    	<div class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </div>
+        <div class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </div>
         <div class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</div>
     </div>
-    
     <div class="container-fluid subjects">
-    	<div class="margin-top-75">
-       	 	<div class="row">
-            
-        		<div class="head sh">
-    				Select a topic to begin:
-        		</div>
-        			<div class="col-xs-3" ng-repeat="subject in subjects track by $index" ng-click="onClicked(subject)">
-                    	<div class="so">
-                        	<div  id="subject-box">
-                				<div id="overlay">
-            						<div >
-                    					<img ng-src="{{subject.img}}" alt="" class="img-responsive">
-                    				</div>
-                    				<div class="head shh">
-                    					{{subject.name}}
-                    				</div>
-                             	</div>
-                           </div>
-                    	</div>
-            		</div>
+        <div class="margin-top-75">
+            <div class="row">
+                <div class="head sh">
+                    Select a topic to begin:
                 </div>
-        	</div>
-        
-    	</div>
+                <div class="col-xs-3" ng-repeat="subject in subjects track by $index" ng-click="onClicked(subject)">
+                    <div class="thumbnail under">
+                        <div ng-mouseenter="hover = true" ng-mouseleave="hover = false" ng-class="{hovereffect: hover}" class="overlay">
+                            <!-- insert some overlay stuff here -->
+                        </div>
+                        <img style="width: 100%;" ng-src="{{subject.img}}" alt="" class="img-responsive">
+                        <div class="head caption">
+                            {{subject.name}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="text-center footer">&copy; Biotility, 2015.</div>
-    
+</div>
+<div class="text-center footer">&copy; Biotility, 2015.</div>
 </div>
