--- a/modules/quiz/client/views/quizResults.client.view.html
+++ b/modules/quiz/client/views/quizResults.client.view.html
@@ -1,4 +1,4 @@
-<div class = "margin-top-50" ng-controller = "QuizResultsController">
+<div class = "margin-top-50" ng-controller = "QuizController">
 	<div class="header-space">
         <!-- Using this for space -->
     </div>
