--- a/modules/core/client/views/subject.client.view.html
+++ b/modules/core/client/views/subject.client.view.html
@@ -1,5 +1,5 @@
 <div class="margin-top-50" ui-view ng-controller="SubjectController">
-    <div class="header-space">
+    <div class="margin-top-75">
         <!-- Insert header material here -->
     </div>
     <div class="container">
